// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pager Offset Pager 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item active disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=1"
    >
      <span
        aria-hidden="true"
      >
        «
      </span>
      <span
        className="visually-hidden"
      >
        First
      </span>
      <span
        className="visually-hidden"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=0"
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </span>
  </li>
  <li
    className="page-item active"
  >
    <span
      className="page-link"
      disabled={false}
      href="/?page=1"
    >
      1
      <span
        className="visually-hidden"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=2"
    >
      2
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=3"
    >
      3
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=4"
    >
      4
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=5"
    >
      5
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
      >
        …
      </span>
      <span
        className="visually-hidden"
      >
        More
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=10"
    >
      10
    </a>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=2"
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=10"
    >
      <span
        aria-hidden="true"
      >
        »
      </span>
      <span
        className="visually-hidden"
      >
        Last
      </span>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Pager Relay Pager 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?before=bbb&last="
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?after=ccc&first="
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Pager Simple Page 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item active disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=1"
    >
      <span
        aria-hidden="true"
      >
        «
      </span>
      <span
        className="visually-hidden"
      >
        First
      </span>
      <span
        className="visually-hidden"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      href="/?page=0"
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </span>
  </li>
  <li
    className="page-item active"
  >
    <span
      className="page-link"
      disabled={false}
      href="/?page=1"
    >
      1
      <span
        className="visually-hidden"
      >
        (current)
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=2"
    >
      2
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=3"
    >
      3
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=4"
    >
      4
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=5"
    >
      5
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
      >
        …
      </span>
      <span
        className="visually-hidden"
      >
        More
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=10"
    >
      10
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=2"
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      disabled={false}
      href="/?page=10"
    >
      <span
        aria-hidden="true"
      >
        »
      </span>
      <span
        className="visually-hidden"
      >
        Last
      </span>
    </a>
  </li>
</ul>
`;
